changes on the webauth

--- a/views/partials/formsection.ejs
+++ b/views/partials/formsection.ejs
@@ -1294,11 +1294,7 @@
       </svg>
         </div>
         <div class="hidden md:flex sm:w-auto md:w-3/6 shadow pt-14 bg-brand " id='formID'>
-            <!-- <div class="flex justify-center space-x-5 font-medium form-container">
-                <input type="button" id="loginbtn" class="flex py-2 text-current border-b cursor-pointer border-brand-primary" value="Login" />
-                <input type="button" id="registerbtn" class="cursor-pointer border-brand-primary" value="Register" />
-                <div id="sign-in-button" name="sign-in-button"></div>
-            </div> -->
+
             <div class=" mx-auto login-container sm:w-10/12 ">
                 <%- include('./login.ejs')  %>
 
@@ -1308,5 +1304,5 @@
     </div>
 </div>
 
-
-</script>
+<script src="/client/public/js/form.js"></script>
+<script src="js/firebase.js"></script>
