--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,9 +12,9 @@
                     <ul class="flex space-x-4">
 
                         <li>
-                            <a class="hover:text-brand-primary" href="">about</a>
+                            <a class="hover:text-brand-primary">about</a>
                         </li>
-                        <li><a class="hover:text-brand-primary" href="">contact</a></li>
+                        <li><a class="hover:text-brand-primary" id="statMenu">Status</a></li>
 
 
                     </ul>
@@ -28,21 +28,7 @@
                   <div class="_2 h-1 w-8 bg-brand-primary rounded-full "></div>
                   </div>
                   
-                  
-                  
-                  <!-- <svg version="1.1" id="Capa_1"  width="40px" height="50px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 384.97 384.97" style="enable-background:new 0 0 384.97 384.97;" xml:space="preserve" fill="#f97316">
-<g>
-	<g id="Menu_1_" fill="#f97316">
-		<path d="M12.03,120.303h360.909c6.641,0,12.03-5.39,12.03-12.03c0-6.641-5.39-12.03-12.03-12.03H12.03
-			c-6.641,0-12.03,5.39-12.03,12.03C0,114.913,5.39,120.303,12.03,120.303z"/>
-		<path d="M372.939,180.455H12.03c-6.641,0-12.03,5.39-12.03,12.03s5.39,12.03,12.03,12.03h360.909c6.641,0,12.03-5.39,12.03-12.03
-			S379.58,180.455,372.939,180.455z"/>
-		<path d="M372.939,264.667H132.333c-6.641,0-12.03,5.39-12.03,12.03c0,6.641,5.39,12.03,12.03,12.03h240.606
-			c6.641,0,12.03-5.39,12.03-12.03C384.97,270.056,379.58,264.667,372.939,264.667z"/>
-	</g><g></g><g></g><g></g><g></g><g></g><g></g></g></svg> -->
-                 
-      
+                
       <div
         id="menu"
         class="hidden md:hidden absolute -right-0 h-screen bg-brand-secondary w-8/12 pt-4 -z-10 transition-all ease-in duration-1000 group-focus:opacity-100 group-focus:rght-100 group"
@@ -57,12 +43,12 @@
             <a href="">about</a>
           </li>
           <li class="hover:bg-brand-primary px-4 pt-4">
-            <a href="">contact</a>
+           <a class="hover:text-brand-primary" id="statMenu">Status</a>
           </li>
 
           <div class= " menu-form pt-10">
             <li class="   px-4 pt-4">
-              <a class='bg-transparent border-2 border-brand-primary rounded-md px-6  hover:translate-x-5 py-4' id='mlogin'>LOGIN</a>
+              <a class='bg-transparent border-2 border-brand-primary rounded-md px-6  hover:translate-x-5 py-4' id='mlogin'>VERIFY</a>
             </li>
           </div>
          
@@ -78,10 +64,6 @@
     const mobileBtn = document.getElementById("btn");
     const mobileMenu = document.getElementById("menu");
     const svg = document.getElementById("Capa_1");
-    // const animate = document.getElementById("_1");
-    // const animate2 = document.getElementById("_2");
-    // const joy = `rotate-45`
-
     mobileBtn.addEventListener("click", () => {
         mobileMenu.classList.toggle("hidden");
     });
